bug fixes, visualization works

--- a/tutorials/Tutorial5 - visualize recovery results.ipynb
+++ b/tutorials/Tutorial5 - visualize recovery results.ipynb
@@ -24,8 +24,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-gar522rx because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n",
-      "2022-12-15 12:59:12.178287: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-hrkba1ie because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n",
+      "2022-12-15 16:31:45.267452: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     },
     {
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Load a checkpoint and define a VolumeVisualizer object.\n",
+    "Load a checkpoint and Visualizer object\n",
     "Note: make sure checkpoint_dir points to saved ceckpoint directory\n",
     "\"\"\"\n",
     "checkpoint_dir = '../checkpoints/tutorial3/recovery.2022-11-16.16:19:12/'\n",
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3ba3aa91-7af3-4f60-ae18-3fc0a5d1d7ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee1b64a611a54c349b1ecc7c517da117",
+       "model_id": "fb25f98522664a5e948de05e19341fea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,32 +91,32 @@
     "\"\"\"\n",
     "Define the position of the camera and sample/integrate emission according to the camera rays.\n",
     "View the estimated emission at t=0 from multiple angles. \n",
-    "Note that jit is useful for acceleration however the initial rendering will be slow due to compilation.\n",
+    "Note that jit is useful for acceleration of many frames however the initial rendering will be slow due to compilation.\n",
     "\"\"\"\n",
-    "images = []\n",
     "bh_radius = 2.0\n",
     "rmax = 8.0\n",
-    "camrad = 37.\n",
-    "linewidth=0.1\n",
+    "cam_r = 37.\n",
+    "linewidth = 0.1\n",
     "\n",
+    "images = []\n",
     "for azimuth in tqdm(np.linspace(0.0, 360, 6)):\n",
-    "    visualizer.set_view(radius=camrad, azimuth=azimuth, zenith=np.pi/3, \n",
-    "                        near=camrad-rmax*np.sqrt(2.)-1., far=camrad+rmax*np.sqrt(2)+1.)\n",
+    "    visualizer.set_view(cam_r=cam_r, domain_r=rmax, azimuth=azimuth, zenith=np.pi/3)\n",
     "    emission = bhnerf.network.sample_3d_grid(predictor.apply, state['params'], bh_radius, rmax, coords=visualizer.coords)\n",
     "    emission = emission / emission.max()\n",
-    "    images.append(visualizer.render(emission, facewidth=2.0*rmax, jit=False, bh_radius=bh_radius, linewidth=linewidth))"
+    "    image = visualizer.render(emission, facewidth=2.0*rmax, jit=False, bh_radius=bh_radius, linewidth=linewidth)\n",
+    "    images.append(image.clip(a_max=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bd127926-ddd3-4103-8833-8c4dc78b5bc4",
+   "execution_count": 4,
+   "id": "98141971-a8ee-4822-b20d-bacb62d5a109",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b965f2bb4f348d88c180694454c3ae0",
+       "model_id": "1a8b4881692344d1bf39cc930c783908",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,25 +126,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
-     ]
     }
    ],
    "source": [
     "%matplotlib widget\n",
     "fig, axes = plt.subplots(1, 6, figsize=(10,2))\n",
     "for ax, image in zip(axes, images):\n",
-    "    ax.imshow(image);\n",
+    "    ax.imshow(image)\n",
     "    ax.axis('off');\n",
     "plt.tight_layout()"
    ]
