--- a/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-0q609sa6 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-e2rw2qwt because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-16 16:16:03.772882: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-12-15 14:53:39.721587: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -82,6 +82,7 @@
     "inclination = np.deg2rad(60.0)      \n",
     "nt = 64                             # number of image frames\n",
     "fov_M = 16.0                        # field of view (M)\n",
+    "rmax = fov_M / 2\n",
     "t_frames = np.linspace(0, 1.0, nt) * units.hr\n",
     "\n",
     "# Compute geodesics (see Tutorial1)\n",
@@ -91,8 +92,11 @@
     "    alpha_range=[-fov_M/2, fov_M/2],\n",
     "    beta_range=[-fov_M/2, fov_M/2]\n",
     ")\n",
-    "Omega = np.sign(spin + np.finfo(float).eps) * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
     "t_injection = -float(geos.r_o)\n",
+    "rmin = float(geos.r.min())\n",
+    "\n",
+    "# Keplerian prograde velocity field\n",
+    "Omega = np.sign(spin + np.finfo(float).eps) * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
     "\n",
     "emission_0 = bhnerf.emission.generate_hotspot_xr(\n",
     "    resolution=(64, 64, 64), \n",
@@ -129,7 +133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "657fcb3f50c942c1b363122a3385335b",
+       "model_id": "2a91b3db83014e92aa9f069be2896457",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,16 +151,20 @@
     "Note that logging is done using tensorboardX. To view the tensorboard (from the main directory):\n",
     "    `tensorboard --logdir runs`\n",
     "\"\"\"\n",
-    "hparams = {'num_iters': 5000, 'lr_init': 1e-4, 'lr_final': 1e-6, 'batchsize': 6}\n",
+    "batchsize = 6\n",
+    "hparams = {'num_iters': 5000, 'lr_init': 1e-4, 'lr_final': 1e-6}\n",
     "predictor = bhnerf.network.NeRF_Predictor()\n",
-    "train_step = bhnerf.optimization.TrainStep.image(t_frames, image_plane) \n",
+    "train_step = bhnerf.optimization.TrainStep.image(t_frames, image_plane)\n",
+    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax)\n",
+    "params = predictor.init_params(raytracing_args)\n",
+    "state = predictor.init_state(params, **hparams)\n",
     "\n",
-    "# Run optimization. Note: rmax constrains the optimization domain to a radius.\n",
-    "rmax = fov_M / 2\n",
+    "# Run optimization\n",
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
     "runname = 'tutorial3/recovery.{}'.format(current_time)\n",
-    "state = bhnerf.optimization.run(runname, hparams, predictor, train_step, geos, Omega, rmax, t_injection,  \n",
-    "                                emission_true=emission_0, save_period=hparams['num_iters'])"
+    "state = bhnerf.optimization.run(runname, batchsize, hparams['num_iters'], state, train_step,\n",
+    "                                raytracing_args, rmin, rmax, emission_true=emission_0,\n",
+    "                                save_period=hparams['num_iters'])"
    ]
   },
   {
@@ -168,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8e356bef7eb4803a62416c60cc2d6da",
+       "model_id": "0908e42abbc5430d86112e63610ec2be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,7 +193,7 @@
     "Visualize the recovered 3D emission\n",
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
-    "emission_estimate = bhnerf.network.sample_3d_grid(state.apply_fn, state.params, float(geos.r.min()), rmax, fov=fov_M)\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(state.apply_fn, state.params, rmin, rmax, fov=fov_M)\n",
     "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   }
