--- a/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
+++ b/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-nmlb2jmf because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-7cf6_b01 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-16 16:29:03.681448: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-12-15 15:02:24.073688: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -97,8 +97,9 @@
     "\n",
     "array = 'ngEHT'             \n",
     "nt = 64                             # number of image frames\n",
-    "flux_scaling = 0.02                 # scale image-plane values to `reasonable` fluxes  \n",
+    "flux_scale = 0.02                   # scale image-plane values to `reasonable` fluxes  \n",
     "fov_M = 16.0                        # field of view (M)\n",
+    "rmax = fov_M / 2\n",
     "tstart = 2.0 * units.hour           # observation start time\n",
     "tstop = tstart + 40.0 * units.min   # observation stop time\n",
     "\n",
@@ -111,9 +112,10 @@
     ")\n",
     "Omega = np.sign(spin + np.finfo(float).eps) * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
     "t_injection = -float(geos.r_o)\n",
+    "rmin = float(geos.r.min())\n",
     "\n",
     "# Generate hotspot measurements (see Tutorial2) \n",
-    "emission_0 = flux_scaling * bhnerf.emission.generate_hotspot_xr(\n",
+    "emission_0 = flux_scale * bhnerf.emission.generate_hotspot_xr(\n",
     "    resolution=(64, 64, 64), \n",
     "    rot_axis=[0.0, 0.0, 1.0], \n",
     "    rot_angle=0.0,\n",
@@ -148,13 +150,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Splitting Observation File into 64 times\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -167,9 +162,16 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Splitting Observation File into 64 times\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20df5b00871f4bd3adc4d56583c552d6",
+       "model_id": "34475afde4264bcfb14e64cc6b1ce0f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,31 +189,35 @@
     "Note that logging is done using tensorboardX. To view the tensorboard (from the main directory):\n",
     "    `tensorboard --logdir runs`\n",
     "\"\"\"\n",
-    "hparams = {'num_iters': 5000, 'lr_init': 1e-4, 'lr_final': 1e-6, 'batchsize': 6}\n",
+    "batchsize = 6\n",
+    "hparams = {'num_iters': 5000, 'lr_init': 1e-4, 'lr_final': 1e-6}\n",
     "predictor = bhnerf.network.NeRF_Predictor()\n",
+    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax)\n",
+    "params = predictor.init_params(raytracing_args)\n",
+    "state = predictor.init_state(params, **hparams)\n",
     "\n",
     "# Observation parameters \n",
     "chisqdata = eh.imaging.imager_utils.chisqdata_vis\n",
     "train_step = bhnerf.optimization.TrainStep.eht(t_frames, obs, movie.fovx(), movie.xdim, chisqdata)\n",
     "\n",
-    "# Run optimization. Note: rmax constrains the optimization domain to a radius.\n",
-    "rmax = fov_M / 2\n",
+    "# Run optimization\n",
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
     "runname = 'tutorial4/recovery.vis.{}'.format(current_time)\n",
-    "state = bhnerf.optimization.run(runname, hparams, predictor, train_step, geos, Omega, rmax, t_injection,  \n",
-    "                                emission_true=emission_0, save_period=hparams['num_iters'])"
+    "state = bhnerf.optimization.run(runname, batchsize, hparams['num_iters'], state, train_step,\n",
+    "                                raytracing_args, rmin, rmax, emission_true=emission_0, \n",
+    "                                save_period=hparams['num_iters'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "153ab9ad19a240a3b18fda09acc8cfeb",
+       "model_id": "7194596b1666437e9e2399b4d672e5bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,7 +234,7 @@
     "Visualize the recovered 3D emission\n",
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
-    "emission_estimate = bhnerf.network.sample_3d_grid(state.apply_fn, state.params, float(geos.r.min()), rmax, fov=fov_M)\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(state.apply_fn, state.params, rmin, rmax, fov=fov_M)\n",
     "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   }
