added V_frac, restricting disk width (z_width) and Optimizer object for easy logging

--- a/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-e2rw2qwt because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-ils1v478 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,22 +38,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-15 14:53:39.721587: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-12-21 16:48:51.111573: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
    "source": [
     "import bhnerf\n",
-    "import kgeo\n",
-    "import jax\n",
-    "from astropy import units\n",
+    "from bhnerf.optimization import LogFn\n",
     "import numpy as np\n",
-    "import xarray as xr\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "import os\n",
     "from datetime import datetime\n",
-    "from tqdm.notebook import tqdm\n",
+    "from astropy import units\n",
     "\n",
     "# Runing on 2 GPUs\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = '1,2'"
@@ -113,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
+   "id": "ac0aecc4-3e1f-4c78-8add-55ec2e09a3f5",
    "metadata": {
     "tags": []
    },
@@ -133,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a91b3db83014e92aa9f069be2896457",
+       "model_id": "27db139932e44ea5bf8fe37590b10916",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,19 +147,25 @@
     "    `tensorboard --logdir runs`\n",
     "\"\"\"\n",
     "batchsize = 6\n",
+    "z_width = 4      # maximum disk width [M]\n",
     "hparams = {'num_iters': 5000, 'lr_init': 1e-4, 'lr_final': 1e-6}\n",
-    "predictor = bhnerf.network.NeRF_Predictor()\n",
-    "train_step = bhnerf.optimization.TrainStep.image(t_frames, image_plane)\n",
-    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax)\n",
-    "params = predictor.init_params(raytracing_args)\n",
-    "state = predictor.init_state(params, **hparams)\n",
     "\n",
-    "# Run optimization\n",
+    "# Logging \n",
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
     "runname = 'tutorial3/recovery.{}'.format(current_time)\n",
-    "state = bhnerf.optimization.run(runname, batchsize, hparams['num_iters'], state, train_step,\n",
-    "                                raytracing_args, rmin, rmax, emission_true=emission_0,\n",
-    "                                save_period=hparams['num_iters'])"
+    "writer = bhnerf.optimization.SummaryWriter(logdir='../runs/{}'.format(runname))\n",
+    "writer.add_images('emission/true', bhnerf.utils.intensity_to_nchw(emission_0), global_step=0)\n",
+    "log_fns = [\n",
+    "    LogFn(lambda opt: writer.add_scalar('log_loss/train', np.log10(np.mean(opt.loss)), global_step=opt.step)), \n",
+    "    LogFn(lambda opt: writer.recovery_3d(rmin, rmax, z_width, emission_true=emission_0)(opt), log_period=200)\n",
+    "]\n",
+    "\n",
+    "# Optimization\n",
+    "train_step = bhnerf.optimization.TrainStep.image(t_frames, image_plane)\n",
+    "predictor = bhnerf.network.NeRF_Predictor()\n",
+    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax, z_width)\n",
+    "optimizer = bhnerf.optimization.Optimizer(hparams, predictor, raytracing_args, checkpoint_dir='../checkpoints/{}'.format(runname))\n",
+    "optimizer.run(batchsize, train_step, raytracing_args, log_fns=log_fns)"
    ]
   },
   {
@@ -176,7 +177,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0908e42abbc5430d86112e63610ec2be",
+       "model_id": "5ec81d960e0b4c649f359654359d0a8b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,16 +194,16 @@
     "Visualize the recovered 3D emission\n",
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
-    "emission_estimate = bhnerf.network.sample_3d_grid(state.apply_fn, state.params, rmin, rmax, fov=fov_M)\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, rmin, rmax, fov=fov_M)\n",
     "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "jax",
    "language": "python",
-   "name": "python3"
+   "name": "jax"
   },
   "language_info": {
    "codemirror_mode": {
