--- a/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
+++ b/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-7cf6_b01 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-zdvr98zk because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,28 +38,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-15 15:02:24.073688: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-12-21 17:10:25.918331: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
    "source": [
     "import bhnerf\n",
-    "import kgeo\n",
-    "import ehtim as eh\n",
+    "from bhnerf.optimization import LogFn\n",
     "import bhnerf.constants as consts\n",
-    "from astropy import units\n",
-    "import jax\n",
-    "\n",
     "import numpy as np\n",
-    "import xarray as xr\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "import os\n",
     "from datetime import datetime\n",
-    "from tqdm.notebook import tqdm\n",
+    "from astropy import units\n",
+    "import ehtim as eh\n",
     "\n",
     "# Runing on 2 GPUs\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '1,2'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0,3'"
    ]
   },
   {
@@ -145,10 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
+   "execution_count": 3,
+   "id": "d0f78171-f3bc-4915-954b-90f27c10c112",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Splitting Observation File into 64 times\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -162,16 +163,9 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Splitting Observation File into 64 times\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34475afde4264bcfb14e64cc6b1ce0f6",
+       "model_id": "bf82af610be34878894c0a0fecdfd29c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -190,34 +184,40 @@
     "    `tensorboard --logdir runs`\n",
     "\"\"\"\n",
     "batchsize = 6\n",
+    "z_width = 4      # maximum disk width [M]\n",
     "hparams = {'num_iters': 5000, 'lr_init': 1e-4, 'lr_final': 1e-6}\n",
-    "predictor = bhnerf.network.NeRF_Predictor()\n",
-    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax)\n",
-    "params = predictor.init_params(raytracing_args)\n",
-    "state = predictor.init_state(params, **hparams)\n",
+    "\n",
+    "# Logging \n",
+    "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
+    "runname = 'tutorial4/recovery.vis.{}'.format(current_time)\n",
+    "writer = bhnerf.optimization.SummaryWriter(logdir='../runs/{}'.format(runname))\n",
+    "writer.add_images('emission/true', bhnerf.utils.intensity_to_nchw(emission_0), global_step=0)\n",
+    "log_fns = [\n",
+    "    LogFn(lambda opt: writer.add_scalar('log_loss/train', np.log10(np.mean(opt.loss)), global_step=opt.step)), \n",
+    "    LogFn(lambda opt: writer.recovery_3d(rmin, rmax, z_width, emission_true=emission_0)(opt), log_period=200)\n",
+    "]\n",
     "\n",
     "# Observation parameters \n",
     "chisqdata = eh.imaging.imager_utils.chisqdata_vis\n",
     "train_step = bhnerf.optimization.TrainStep.eht(t_frames, obs, movie.fovx(), movie.xdim, chisqdata)\n",
     "\n",
-    "# Run optimization\n",
-    "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
-    "runname = 'tutorial4/recovery.vis.{}'.format(current_time)\n",
-    "state = bhnerf.optimization.run(runname, batchsize, hparams['num_iters'], state, train_step,\n",
-    "                                raytracing_args, rmin, rmax, emission_true=emission_0, \n",
-    "                                save_period=hparams['num_iters'])"
+    "# Optimization\n",
+    "predictor = bhnerf.network.NeRF_Predictor()\n",
+    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax, z_width)\n",
+    "optimizer = bhnerf.optimization.Optimizer(hparams, predictor, raytracing_args, checkpoint_dir='../checkpoints/{}'.format(runname))\n",
+    "optimizer.run(batchsize, train_step, raytracing_args, log_fns=log_fns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7194596b1666437e9e2399b4d672e5bf",
+       "model_id": "eb24126608124033b44d6adb88a2c207",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +234,7 @@
     "Visualize the recovered 3D emission\n",
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
-    "emission_estimate = bhnerf.network.sample_3d_grid(state.apply_fn, state.params, rmin, rmax, fov=fov_M)\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, rmin, rmax, np.inf, fov_M)\n",
     "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   }
