scaling of the NN input coords, added parameter yml

--- a/tutorials/Tutorial5 - visualize recovery results.ipynb
+++ b/tutorials/Tutorial5 - visualize recovery results.ipynb
@@ -16,27 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "dbf1765c-890a-4c7a-a16d-c8a64b217f43",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-hrkba1ie because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n",
-      "2022-12-15 16:31:45.267452: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to eht-imaging! v 1.2.2 \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -49,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c2118c19-fccf-405c-897b-90e72a89a62f",
    "metadata": {},
    "outputs": [],
@@ -58,8 +41,8 @@
     "Load a checkpoint and Visualizer object\n",
     "Note: make sure checkpoint_dir points to saved ceckpoint directory\n",
     "\"\"\"\n",
-    "checkpoint_dir = '../checkpoints/tutorial3/recovery.2022-11-16.16:19:12/'\n",
-    "predictor = bhnerf.network.NeRF_Predictor()\n",
+    "checkpoint_dir = '../checkpoints/tutorial3/recovery.2022-12-23.11:28:41/'\n",
+    "predictor = bhnerf.network.NeRF_Predictor.from_yml(checkpoint_dir)\n",
     "state = checkpoints.restore_checkpoint(checkpoint_dir, None)\n",
     "\n",
     "resolution = 128\n",
@@ -68,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3ba3aa91-7af3-4f60-ae18-3fc0a5d1d7ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb25f98522664a5e948de05e19341fea",
+       "model_id": "5526a0b7ddf54b89a328bac917a57cff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,14 +77,14 @@
     "Note that jit is useful for acceleration of many frames however the initial rendering will be slow due to compilation.\n",
     "\"\"\"\n",
     "bh_radius = 2.0\n",
-    "rmax = 8.0\n",
     "cam_r = 37.\n",
     "linewidth = 0.1\n",
+    "rmax = predictor.rmax\n",
     "\n",
     "images = []\n",
     "for azimuth in tqdm(np.linspace(0.0, 360, 6)):\n",
     "    visualizer.set_view(cam_r=cam_r, domain_r=rmax, azimuth=azimuth, zenith=np.pi/3)\n",
-    "    emission = bhnerf.network.sample_3d_grid(predictor.apply, state['params'], bh_radius, rmax, coords=visualizer.coords)\n",
+    "    emission = bhnerf.network.sample_3d_grid(predictor.apply, state['params'], coords=visualizer.coords)\n",
     "    emission = emission / emission.max()\n",
     "    image = visualizer.render(emission, facewidth=2.0*rmax, jit=False, bh_radius=bh_radius, linewidth=linewidth)\n",
     "    images.append(image.clip(a_max=1))"
@@ -109,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "98141971-a8ee-4822-b20d-bacb62d5a109",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a8b4881692344d1bf39cc930c783908",
+       "model_id": "31be57f0db314cc9a12bd07b37595ca7",
        "version_major": 2,
        "version_minor": 0
       },
