--- a/notebooks/Fitting synthetic ALMA lightcurves.ipynb
+++ b/notebooks/Fitting synthetic ALMA lightcurves.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-88dva6bb because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-6v8uwegk because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-22 12:31:20.657045: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-12-23 11:36:16.692362: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f947bad8fb3430487c5205e371b6881",
+       "model_id": "8de8a32d7f1c43c5a19cb36f462a2d92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,7 +142,6 @@
     "fov_M = 30.0 \n",
     "spin = 0.2\n",
     "inclination = np.deg2rad(20.0)\n",
-    "rmax = fov_M / 2\n",
     "\n",
     "# Compute geodesics (see Tutorial1)\n",
     "geos = bhnerf.kgeo.image_plane_geos(\n",
@@ -152,7 +151,6 @@
     "    beta_range=[-fov_M/2, fov_M/2]\n",
     ")\n",
     "t_injection = -float(geos.r_o)\n",
-    "rmin = float(geos.r.min())\n",
     "\n",
     "# Keplerian prograde velocity field\n",
     "Omega = np.sign(spin + np.finfo(float).eps) * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
@@ -164,6 +162,7 @@
     "Q_frac = 0.8\n",
     "\n",
     "# Polarized emission\n",
+    "stokes = ['I', 'Q', 'U']\n",
     "b_consts = [0.0, -1.0, 0.0]\n",
     "b = bhnerf.kgeo.magnetic_field(geos, *b_consts) \n",
     "J = np.nan_to_num(bhnerf.kgeo.parallel_transport(geos, umu, g, b, Q_frac=Q_frac, V_frac=0), 0.0)"
@@ -192,7 +191,6 @@
     "orbit_radius = 10.0\n",
     "hs_std = 1.0\n",
     "\n",
-    "# Generate hotspot measurements (see Tutorial2)\n",
     "emission_hs = flux_scale * bhnerf.emission.generate_hotspot_xr(\n",
     "    resolution=(64, 64, 64), \n",
     "    rot_axis=[0.0, 0.0, 1.0], \n",
@@ -208,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "4448ca51-54ae-4a48-8c80-ec76a345a3ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7febbf40b134c5080c8f029a1fdf846",
+       "model_id": "8cd6d187bf4f429cb0c8f4ec0d72bf4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,10 +227,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7fa1f4f27b50>"
+       "<matplotlib.animation.FuncAnimation at 0x7f7c9b7abd60>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,19 +239,19 @@
     "%matplotlib widget\n",
     "movie_list = [xr.DataArray(image_plane_hs[:,i], dims=['t','alpha','beta']) for i in range(image_plane_hs.shape[1])]\n",
     "fig, axes = plt.subplots(1, 3, figsize=(10, 3))\n",
-    "bhnerf.visualization.animate_movies_synced(movie_list, axes, titles=['I', 'Q', 'U'])"
+    "bhnerf.visualization.animate_movies_synced(movie_list, axes, titles=stokes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "53b7ddf7-da02-44e3-b3b6-cba34037488f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8df51485d3e48d9819b86bdb3f2847d",
+       "model_id": "8b4645fbb110433c810f7da406161a5e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,18 +261,30 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([<AxesSubplot:title={'center':'I lightcurve'}>,\n",
+       "       <AxesSubplot:title={'center':'Q lightcurve'}>,\n",
+       "       <AxesSubplot:title={'center':'U lightcurve'}>,\n",
+       "       <AxesSubplot:title={'center':'Q-U loop'}>], dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%matplotlib widget\n",
-    "bhnerf.visualization.plot_stokes_lc(lc_hs, t_frames, add_mean=True)"
+    "bhnerf.visualization.plot_stokes_lc(lc_hs, stokes, t_frames, add_mean=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "404ebbfc-9fd4-464a-95cb-efa3ea97074e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -297,10 +307,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fd6c6a58-0005-4b88-bece-b5f3a6c8addb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "39054e2f1b8f4c5593003d8cb8a23357",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "iteration:   0%|          | 0/50000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -309,28 +334,30 @@
     "warnings.simplefilter(\"ignore\")\n",
     "\n",
     "batchsize = 6\n",
-    "z_width = 4      # maximum disk width [M]\n",
+    "z_width = 4                # maximum disk width [M]\n",
+    "rmax = fov_M / 2           # maximum recovery radius\n",
+    "rmin = float(geos.r.min()) # minimum recovery radius\n",
     "hparams = {'num_iters': 50000, 'lr_init': 1e-4, 'lr_final': 1e-6, 'seed': 1}\n",
     "\n",
     "lc_total = image_plane_hs.sum(axis=(-1,-2))\n",
     "sigma = [1, 0.1, 0.1]\n",
     "\n",
     "# Logging \n",
-    "runname = 'bg_noisy/alma_model.no_noise.spin_{:.1f}.inc_{:.1f}.rot{:.1f}.initkey{}'.format(\n",
-    "    spin, np.rad2deg(inclination), np.rad2deg(rot_angle), hparams['seed'])\n",
+    "runname = 'bg_noisy/alma_model.no_noise.spin_{:.1f}.inc_{:.1f}.rot{:.1f}.initkey{}.z_width{}'.format(\n",
+    "    spin, np.rad2deg(inclination), np.rad2deg(rot_angle), hparams['seed'], z_width)\n",
     "\n",
     "writer = bhnerf.optimization.SummaryWriter(logdir='../runs/{}'.format(runname))\n",
     "writer.add_images('emission/true', bhnerf.utils.intensity_to_nchw(emission_hs), global_step=0)\n",
     "log_fns = [\n",
     "    LogFn(lambda opt: writer.add_scalar('log_loss/train', np.log10(np.mean(opt.loss)), global_step=opt.step)), \n",
-    "    LogFn(lambda opt: writer.recovery_3d(rmin, rmax, z_width, emission_true=emission_hs)(opt), log_period=200),\n",
-    "    LogFn(lambda opt: writer.plot_lc_datafit(opt, lc_total, ['I','Q','U'], t_frames, batchsize=20), log_period=200)\n",
+    "    LogFn(lambda opt: writer.recovery_3d(fov_M, emission_true=emission_hs)(opt), log_period=200),\n",
+    "    LogFn(lambda opt: writer.plot_lc_datafit(opt, lc_total, stokes, t_frames, batchsize=20), log_period=200)\n",
     "]\n",
     "\n",
     "# Optimization\n",
     "train_step = bhnerf.optimization.TrainStep.image(t_frames, lc_total, sigma, dtype='lc')\n",
-    "predictor = bhnerf.network.NeRF_Predictor()\n",
-    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax, z_width, J)\n",
+    "predictor = bhnerf.network.NeRF_Predictor(rmax, rmin, rmax, z_width)\n",
+    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], J)\n",
     "\n",
     "optimizer = bhnerf.optimization.Optimizer(hparams, predictor, raytracing_args, checkpoint_dir='../checkpoints/{}'.format(runname))\n",
     "optimizer.run(batchsize, train_step, raytracing_args, log_fns=log_fns)"
@@ -338,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "0bc0d12c-a295-4658-a080-9e001fe69a0a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a41b7eec35114f6dbbc4c1722845599e",
+       "model_id": "3ec73c8ef5884bc18ac218de5a21cb43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,8 +385,8 @@
     }
    ],
    "source": [
-    "emission_grid = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, rmin, rmax, z_width, fov_M)\n",
-    "bhnerf.visualization.ipyvolume_3d(emission_grid, fov=fov_M, level=[0, 0.2, 0.7])"
+    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, fov=fov_M)\n",
+    "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   },
   {
@@ -375,19 +402,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "58c4d587-d074-46fb-b651-a73d2037c4c9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  result_data = func(*input_data)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Load a 2D Gaussian Random Field (GRF) and expand it to 3D.\n",
@@ -408,14 +426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "36b75ed0-ca19-4b15-b9a7-c56bfb3ba878",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3de10342f2745aea9e748e0b375a8a0",
+       "model_id": "7e254f11f3784db78964e18e6e848432",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,10 +447,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7f2df689fa90>"
+       "<matplotlib.animation.FuncAnimation at 0x7f780468d040>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,14 +464,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "d714ad8b-6a9d-4243-bb64-2ad9944e120f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d9ffa9827b042968c31300c8fe4c8ad",
+       "model_id": "7220d209c7ab489bb897d96aadef81d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -467,7 +485,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Optimization: fitting Q-U components \n",
+    "Optimization: fit Q, U stokes components \n",
     "\"\"\"\n",
     "%matplotlib inline\n",
     "\n",
@@ -476,33 +494,63 @@
     "warnings.simplefilter(\"ignore\")\n",
     "\n",
     "batchsize = 6\n",
-    "z_width = 4      # maximum disk width [M]\n",
+    "z_width = 4                # maximum disk width [M]\n",
+    "rmax = fov_M / 2           # maximum recovery radius\n",
+    "rmin = float(geos.r.min()) # minimum recovery radius\n",
     "hparams = {'num_iters': 50000, 'lr_init': 1e-4, 'lr_final': 1e-6, 'seed': 1}\n",
     "\n",
+    "stokes = ['Q', 'U']\n",
     "_J = J[1:]\n",
     "lc_total = image_plane.sum(axis=(-1,-2))[:, 1:]\n",
     "sigma = [0.1, 0.1]\n",
     "\n",
     "# Logging \n",
-    "runname = 'bg_noisy/alma_model.spin_{:.1f}.inc_{:.1f}.rot{:.1f}.QU_only.seed12.initkey{}'.format(\n",
-    "    spin, np.rad2deg(inclination), np.rad2deg(rot_angle),hparams['seed'])\n",
-    "runname = 'bg_noisy/alma_model.no_noise.1234'\n",
+    "runname = 'bg_noisy/alma_model.spin_{:.1f}.inc_{:.1f}.rot{:.1f}.QU_only.seed12.initkey{}.z_width{}'.format(\n",
+    "    spin, np.rad2deg(inclination), np.rad2deg(rot_angle),hparams['seed'], z_width)\n",
     "\n",
     "writer = bhnerf.optimization.SummaryWriter(logdir='../runs/{}'.format(runname))\n",
     "writer.add_images('emission/true', bhnerf.utils.intensity_to_nchw(emission_hs), global_step=0)\n",
     "log_fns = [\n",
     "    LogFn(lambda opt: writer.add_scalar('log_loss/train', np.log10(np.mean(opt.loss)), global_step=opt.step)), \n",
-    "    LogFn(lambda opt: writer.recovery_3d(rmin, rmax, z_width, emission_true=emission_hs)(opt), log_period=200),\n",
-    "    LogFn(lambda opt: writer.plot_lc_datafit(opt, lc_total, ['Q','U'], t_frames, batchsize=20), log_period=200)\n",
+    "    LogFn(lambda opt: writer.recovery_3d(fov_M, emission_true=emission_hs)(opt), log_period=200),\n",
+    "    LogFn(lambda opt: writer.plot_lc_datafit(opt, lc_total, stokes, t_frames, batchsize=20), log_period=200)\n",
     "]\n",
     "\n",
     "# Optimization\n",
     "train_step = bhnerf.optimization.TrainStep.image(t_frames, lc_total, sigma, dtype='lc')\n",
-    "predictor = bhnerf.network.NeRF_Predictor()\n",
-    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax, z_width, _J)\n",
+    "predictor = bhnerf.network.NeRF_Predictor(rmax, rmin, rmax, z_width)\n",
+    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], _J)\n",
     "\n",
-    "optimizer = bhnerf.optimization.Optimizer(hparams, predictor, raytracing_args, checkpoint_dir='../checkpoints/{}'.format(runname))\n",
+    "optimizer = bhnerf.optimization.Optimizer(hparams, predictor, raytracing_args, \n",
+    "                                          save_period=10000,\n",
+    "                                          checkpoint_dir='../checkpoints/{}'.format(runname))\n",
     "optimizer.run(batchsize, train_step, raytracing_args, log_fns=log_fns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2889308e-1932-41d2-98e9-c0eeaf8664f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a965afae6ed943109d132346891f9241",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, -2.1650635094610964, 1.250000000000000…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, fov=fov_M)\n",
+    "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   },
   {
@@ -518,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "f087e1a0-05c6-4e6b-a6a2-b15f66af1f33",
    "metadata": {},
    "outputs": [],
@@ -529,32 +577,34 @@
     "        output = output[:-1]\n",
     "    return output\n",
     "\n",
-    "checkpoint_dir = '../checkpoints/bg_noisy/alma_model.spin_0.2.inc_20.0.rot180.0.QU_only.seed12.initkey2/'\n",
+    "#checkpoint_dir = '../checkpoints/bg_noisy/alma_model.spin_0.2.inc_20.0.rot180.0.QU_only.seed12.initkey2/'\n",
+    "\n",
+    "checkpoint_dir = '../checkpoints/tutorial3/recovery.2022-12-23.11:28:41/'\n",
     "batchsize = 20\n",
     "\n",
     "t_frames = trim_to_gpu_num(t_frames)\n",
     "target = trim_to_gpu_num(lc_total)\n",
     "\n",
     "train_step = bhnerf.optimization.TrainStep.image(t_frames, lc_total, sigma, dtype='lc')\n",
-    "predictor = bhnerf.network.NeRF_Predictor()\n",
-    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax, z_width, _J)\n",
+    "predictor = bhnerf.network.NeRF_Predictor.from_yml(checkpoint_dir)\n",
+    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], _J)\n",
     "params = predictor.init_params(raytracing_args)\n",
     "state = predictor.init_state(params, checkpoint_dir=checkpoint_dir)\n",
     "\n",
-    "loss, movie = bhnerf.optimization.total_movie_loss(batchsize, state, train_step, raytracing_args, True)\n",
+    "loss, movie = bhnerf.optimization.total_movie_loss(batchsize, state, train_step, raytracing_args, return_frames=True)\n",
     "lc_est = movie.sum(axis=(-1,-2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "e9d4d4a9-7a5c-437c-b096-2c3204f22f34",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8dbb5e088da4c82b8e0297e76a0e355",
+       "model_id": "f0aebedb7059401abb00f3bde3e01e72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -568,10 +618,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7f4d205f0280>"
+       "<matplotlib.animation.FuncAnimation at 0x7f79e0732190>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +642,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7c7bd8b85504c6a9b17069dad27d7b9",
+       "model_id": "90944a3c144043a1b1e7cef57941e783",
        "version_major": 2,
        "version_minor": 0
       },
@@ -614,14 +664,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "d58bac8b-830a-4970-9e0f-a6ef7487a0fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42a2496ebc424dd08e486d716e4dd904",
+       "model_id": "ae6221a325b446a8aabcb1b5fd5c5fe7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -634,8 +684,8 @@
     }
    ],
    "source": [
-    "emission_grid = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, rmin, rmax, z_width, fov_M)\n",
-    "bhnerf.visualization.ipyvolume_3d(emission_grid, fov=fov_M, level=[0, 0.2, 0.7])"
+    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, state.params, fov=fov_M)\n",
+    "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   }
  ],
