--- a/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-ils1v478 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-1yqb86dj because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,13 +38,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-21 16:48:51.111573: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-12-23 11:28:21.200390: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
    "source": [
     "import bhnerf\n",
-    "from bhnerf.optimization import LogFn\n",
     "import numpy as np\n",
     "import os\n",
     "from datetime import datetime\n",
@@ -73,11 +72,11 @@
     "\"\"\"\n",
     "Generate gravitationally lensed image-plane of a hot-spot\n",
     "\"\"\"\n",
+    "fov_M = 16.0\n",
     "spin = 0.2\n",
     "inclination = np.deg2rad(60.0)      \n",
-    "nt = 64                             # number of image frames\n",
-    "fov_M = 16.0                        # field of view (M)\n",
-    "rmax = fov_M / 2\n",
+    "nt = 64                            \n",
+    "\n",
     "t_frames = np.linspace(0, 1.0, nt) * units.hr\n",
     "\n",
     "# Compute geodesics (see Tutorial1)\n",
@@ -88,7 +87,6 @@
     "    beta_range=[-fov_M/2, fov_M/2]\n",
     ")\n",
     "t_injection = -float(geos.r_o)\n",
-    "rmin = float(geos.r.min())\n",
     "\n",
     "# Keplerian prograde velocity field\n",
     "Omega = np.sign(spin + np.finfo(float).eps) * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
@@ -128,12 +126,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27db139932e44ea5bf8fe37590b10916",
+       "model_id": "09a3747eb2e448c7b4f5e00666566773",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "iteration:   0%|          | 0/5000 [00:00<?, ?it/s]"
+       "iteration:   0%|          | 0/1000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -146,9 +144,13 @@
     "Note that logging is done using tensorboardX. To view the tensorboard (from the main directory):\n",
     "    `tensorboard --logdir runs`\n",
     "\"\"\"\n",
+    "from bhnerf.optimization import LogFn\n",
+    "\n",
     "batchsize = 6\n",
-    "z_width = 4      # maximum disk width [M]\n",
-    "hparams = {'num_iters': 5000, 'lr_init': 1e-4, 'lr_final': 1e-6}\n",
+    "z_width = 4                # maximum disk width [M]\n",
+    "rmax = fov_M / 2           # maximum recovery radius\n",
+    "rmin = float(geos.r.min()) # minimum recovery radius\n",
+    "hparams = {'num_iters': 1000, 'lr_init': 1e-4, 'lr_final': 1e-6}\n",
     "\n",
     "# Logging \n",
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
@@ -157,13 +159,13 @@
     "writer.add_images('emission/true', bhnerf.utils.intensity_to_nchw(emission_0), global_step=0)\n",
     "log_fns = [\n",
     "    LogFn(lambda opt: writer.add_scalar('log_loss/train', np.log10(np.mean(opt.loss)), global_step=opt.step)), \n",
-    "    LogFn(lambda opt: writer.recovery_3d(rmin, rmax, z_width, emission_true=emission_0)(opt), log_period=200)\n",
+    "    LogFn(lambda opt: writer.recovery_3d(fov_M, emission_true=emission_0)(opt), log_period=200)\n",
     "]\n",
     "\n",
     "# Optimization\n",
     "train_step = bhnerf.optimization.TrainStep.image(t_frames, image_plane)\n",
-    "predictor = bhnerf.network.NeRF_Predictor()\n",
-    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax, z_width)\n",
+    "predictor = bhnerf.network.NeRF_Predictor(rmax, rmin, rmax, z_width)\n",
+    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0])\n",
     "optimizer = bhnerf.optimization.Optimizer(hparams, predictor, raytracing_args, checkpoint_dir='../checkpoints/{}'.format(runname))\n",
     "optimizer.run(batchsize, train_step, raytracing_args, log_fns=log_fns)"
    ]
@@ -172,12 +174,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ec81d960e0b4c649f359654359d0a8b",
+       "model_id": "3b7822610a1347e2b3f36cf6432d0ed9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -194,7 +198,7 @@
     "Visualize the recovered 3D emission\n",
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
-    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, rmin, rmax, fov=fov_M)\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, fov=fov_M)\n",
     "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   }
