--- a/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
+++ b/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-zdvr98zk because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-f9gq8fb0 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,13 +38,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-21 17:10:25.918331: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-12-23 10:29:22.888929: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
    "source": [
     "import bhnerf\n",
-    "from bhnerf.optimization import LogFn\n",
     "import bhnerf.constants as consts\n",
     "import numpy as np\n",
     "import os\n",
@@ -86,14 +85,13 @@
     "\"\"\"\n",
     "Generate synthetic observations of a hot-spot\n",
     "\"\"\"\n",
+    "fov_M = 16.0\n",
     "spin = 0.2\n",
-    "inclination = np.deg2rad(60.0)\n",
+    "inclination = np.deg2rad(60.0)      \n",
+    "nt = 64\n",
     "\n",
     "array = 'ngEHT'             \n",
-    "nt = 64                             # number of image frames\n",
-    "flux_scale = 0.02                   # scale image-plane values to `reasonable` fluxes  \n",
-    "fov_M = 16.0                        # field of view (M)\n",
-    "rmax = fov_M / 2\n",
+    "flux_scale = 0.02                   # scale image-plane fluxes to `reasonable` values  \n",
     "tstart = 2.0 * units.hour           # observation start time\n",
     "tstop = tstart + 40.0 * units.min   # observation stop time\n",
     "\n",
@@ -106,7 +104,7 @@
     ")\n",
     "Omega = np.sign(spin + np.finfo(float).eps) * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
     "t_injection = -float(geos.r_o)\n",
-    "rmin = float(geos.r.min())\n",
+    "\n",
     "\n",
     "# Generate hotspot measurements (see Tutorial2) \n",
     "emission_0 = flux_scale * bhnerf.emission.generate_hotspot_xr(\n",
@@ -165,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf82af610be34878894c0a0fecdfd29c",
+       "model_id": "3424160bd95846f5972758e24132db45",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,8 +181,12 @@
     "Note that logging is done using tensorboardX. To view the tensorboard (from the main directory):\n",
     "    `tensorboard --logdir runs`\n",
     "\"\"\"\n",
+    "from bhnerf.optimization import LogFn\n",
+    "\n",
     "batchsize = 6\n",
-    "z_width = 4      # maximum disk width [M]\n",
+    "z_width = 4                # maximum disk width [M]\n",
+    "rmax = fov_M / 2           # maximum recovery radius\n",
+    "rmin = float(geos.r.min()) # minimum recovery radius\n",
     "hparams = {'num_iters': 5000, 'lr_init': 1e-4, 'lr_final': 1e-6}\n",
     "\n",
     "# Logging \n",
@@ -194,7 +196,7 @@
     "writer.add_images('emission/true', bhnerf.utils.intensity_to_nchw(emission_0), global_step=0)\n",
     "log_fns = [\n",
     "    LogFn(lambda opt: writer.add_scalar('log_loss/train', np.log10(np.mean(opt.loss)), global_step=opt.step)), \n",
-    "    LogFn(lambda opt: writer.recovery_3d(rmin, rmax, z_width, emission_true=emission_0)(opt), log_period=200)\n",
+    "    LogFn(lambda opt: writer.recovery_3d(fov_M, emission_true=emission_0)(opt), log_period=200)\n",
     "]\n",
     "\n",
     "# Observation parameters \n",
@@ -202,22 +204,22 @@
     "train_step = bhnerf.optimization.TrainStep.eht(t_frames, obs, movie.fovx(), movie.xdim, chisqdata)\n",
     "\n",
     "# Optimization\n",
-    "predictor = bhnerf.network.NeRF_Predictor()\n",
-    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0], rmax, z_width)\n",
+    "predictor = bhnerf.network.NeRF_Predictor(rmax, rmin, rmax, z_width)\n",
+    "raytracing_args = bhnerf.network.raytracing_args(geos, Omega, t_injection, t_frames[0])\n",
     "optimizer = bhnerf.optimization.Optimizer(hparams, predictor, raytracing_args, checkpoint_dir='../checkpoints/{}'.format(runname))\n",
     "optimizer.run(batchsize, train_step, raytracing_args, log_fns=log_fns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb24126608124033b44d6adb88a2c207",
+       "model_id": "96b3c3bc48594a508ce5748d3081927a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +236,7 @@
     "Visualize the recovered 3D emission\n",
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
-    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, rmin, rmax, np.inf, fov_M)\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, fov_M)\n",
     "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   }
