added flux tube

--- a/notebooks/Synthetic lightcurves 0 - Generate data.ipynb
+++ b/notebooks/Synthetic lightcurves 0 - Generate data.ipynb
@@ -2,33 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "b85f8e98-8ea4-4e4c-9304-038107b539e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-coi_mgdp because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to eht-imaging! v 1.2.2 \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-01 17:12:15.287439: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import bhnerf\n",
     "from astropy import units\n",
@@ -36,6 +13,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
+    "import ruamel.yaml as yaml\n",
     "\n",
     "data_path = Path('../data/synthetic_lightcurves')"
    ]
@@ -44,7 +22,6 @@
    "cell_type": "markdown",
    "id": "96b549db-fec5-45ea-9280-7236035892be",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -54,18 +31,6 @@
     " - Single hotspot\n",
     " - Three Hotspots\n",
     " - Hotpot + tube"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "724832b8-59d7-452c-bac4-332a81979dc7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To roughly match a single hotspot time average inensity=0.3, pol=0.15 (with fwhm=6)\n",
-    "fov_M = 40.0\n",
-    "emission_scale = 0.01   "
    ]
   },
   {
@@ -81,12 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "3165238e-08c0-4de4-a92e-bff7898cc98f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hs_fwhm = 6\n",
+    "fov_M = 40.0\n",
+    "emission_scale = 3.0   \n",
+    "hs_fwhm = 3\n",
     "hs_std = hs_fwhm / 2.355\n",
     "orbit_radius = 11.0\n",
     "rot_angle = np.deg2rad(120) + np.pi/2\n",
@@ -114,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "a8f20bda-8eb8-4ef6-815d-007b5ed8caef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8bea486aea04b58bd2c97bb28bdfe8c",
+       "model_id": "39833b7e5d464d579259c54361c87883",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,11 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "411e1d26-09b0-44be-befa-a7f1d1199f97",
    "metadata": {},
    "outputs": [],
    "source": [
+    "fov_M = 40.0\n",
+    "emission_scale = 1\n",
     "hs_fwhms = np.array([3.4, 4.2, 4.6])\n",
     "hs_stds = hs_fwhms / 2.355\n",
     "orbit_radii = [6.5, 11.0, 13.0]\n",
@@ -219,35 +188,25 @@
     "tags": []
    },
    "source": [
-    "### Hotspot + Tube"
+    "### Flux Tube"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 91,
    "id": "a1fa58f9-9d39-46d2-8d1f-14ee7bc7493a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "fov_M = 40.0\n",
     "hs_std = 1.2\n",
     "tube_std = 1.\n",
-    "hs_radius = 13.0\n",
     "tube_radius = 10.0\n",
-    "rot_angle = -np.deg2rad(100)\n",
-    "phi_start = np.deg2rad(170)\n",
-    "phi_end = np.deg2rad(230)\n",
-    "hs_scale = 0.01\n",
-    "tube_scale = 0.035\n",
+    "phi_start = np.deg2rad(190)\n",
+    "phi_end = np.deg2rad(270)\n",
+    "emission = 4\n",
     "\n",
-    "hotspot = hs_scale * bhnerf.emission.generate_hotspot_xr(\n",
-    "    resolution=(64, 64, 64), \n",
-    "    rot_axis=[0.0, 0.0, 1.0], \n",
-    "    rot_angle=rot_angle,\n",
-    "    orbit_radius=hs_radius,\n",
-    "    std=hs_std,\n",
-    "    r_isco=6.0,\n",
-    "    fov=(fov_M, 'GM/c^2'))\n",
-    "tube = tube_scale * bhnerf.emission.generate_tube_xr(\n",
+    "emission = emission * bhnerf.emission.generate_tube_xr(\n",
     "    resolution=(64, 64, 64), \n",
     "    rot_axis=[0.0, 0.0, 1.0], \n",
     "    phi_start=phi_start,\n",
@@ -256,35 +215,31 @@
     "    std=tube_std,\n",
     "    r_isco=6.0,\n",
     "    fov=(fov_M, 'GM/c^2'))\n",
-    "emission = hotspot + tube\n",
-    "emission.name = 'Hotspot+Tube'\n",
+    "emission.name = 'Flux Tube'\n",
     "emission.attrs = {\n",
     "    'fov_M': fov_M,\n",
-    "    'hs_fwhm': hs_fwhm,\n",
+    "    'hs_std': hs_std,\n",
     "    'tube_std':tube_std,\n",
-    "    'hs_radius': hs_radius,\n",
     "    'tube_radius':tube_radius,\n",
-    "    'rot_angle': rot_angle,\n",
-    "    'hs_scale': hs_scale,\n",
     "    'tube_scale': tube_scale}\n",
     "\n",
     "\n",
     "# Save ground truth emission \n",
-    "directory = data_path.joinpath('hotspot+tube')\n",
+    "directory = data_path.joinpath('flux_tube')\n",
     "directory.mkdir(parents=True, exist_ok=True)\n",
     "emission.to_netcdf(directory.joinpath('emission_3d.nc'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "id": "1844cc62-0e84-4d4b-bfe5-2ed541d5ad23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53239a1e112843a0b1fbb2ecd50b55e0",
+       "model_id": "60595be0b9444bdb8bca472fcda0a943",
        "version_major": 2,
        "version_minor": 0
       },
@@ -305,6 +260,7 @@
    "cell_type": "markdown",
    "id": "37080b65-356d-4038-9765-3a7c1a8ecf39",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -315,8 +271,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e39ee600-1f67-4b8f-b6f8-6bd3a3bbeefd",
+   "execution_count": 92,
+   "id": "9943a54d-2bbf-4069-b71c-65155f93a0f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation_params = {\n",
+    "    'name': 'sim1',\n",
+    "    'desc': 'Image fluxes without background accretion',\n",
+    "    'flare_path': '../data/synthetic_lightcurves/flux_tube/emission_3d.nc',\n",
+    "    'model': {\n",
+    "        # Domain dimensions and black-hole params\n",
+    "        'spin': 0.0,\n",
+    "        'inclination': 12.0,\n",
+    "        'fov_M': 40.0, \n",
+    "        # Magnetic field / polarization parameters\n",
+    "        'Q_frac': 0.85,      # Fraction of linear polarization\n",
+    "        'b_consts': {\n",
+    "            'arad': 0,       # Radial component (in lab-frame) \n",
+    "            'avert': 1,      # Vertical component (in lab-frame)\n",
+    "            'ator': 0,       # Toroidal component (in lab-frame)\n",
+    "        },\n",
+    "        # Keplerian velocity field\n",
+    "        'Omega_dir': 'cw',\n",
+    "        # Image plane \n",
+    "        'num_alpha': 64,\n",
+    "        'num_beta': 64,\n",
+    "        't_start_obs': 9.25 \n",
+    "    }}\n",
+    "locals().update(simulation_params['model'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "bf5c0ccd-859c-44bb-83e1-8a1c56ec8b16",
    "metadata": {},
    "outputs": [
     {
@@ -334,45 +323,35 @@
    ],
    "source": [
     "\"\"\" Flare emissivity \"\"\"\n",
-    "sim_name = 'sim1'\n",
-    "flare_path = Path('../data/synthetic_lightcurves/3_gaussians/emission_3d.nc')\n",
+    "sim_name = simulation_params['name']\n",
+    "flare_path = Path(simulation_params['flare_path'])\n",
     "emission_flare = xr.load_dataarray(flare_path)\n",
-    "\n",
-    "# Domain dimensions and black-hole params\n",
-    "spin = 0.0\n",
-    "inclination = np.deg2rad(12.0)\n",
-    "fov_M = 40.0 \n",
-    "z_width = 4                                    # maximum disk width [M]\n",
-    "rmax = fov_M / 2                               # maximum recovery radius\n",
-    "rmin = float(bhnerf.constants.isco_pro(spin))  # minimum recovery radius\n",
     "\n",
     "# Compute geodesics\n",
     "geos = bhnerf.kgeo.image_plane_geos(\n",
-    "    spin, inclination, \n",
-    "    num_alpha=64, num_beta=64, \n",
+    "    spin, np.deg2rad(inclination), \n",
+    "    num_alpha=num_alpha, num_beta=num_beta, \n",
     "    alpha_range=[-fov_M/2, fov_M/2],\n",
     "    beta_range=[-fov_M/2, fov_M/2])\n",
     "t_injection = -float(geos.r_o + fov_M/4)\n",
     "\n",
-    "# Magnetic field / polarization parameters\n",
-    "Q_frac = 0.85\n",
-    "b_consts = [0.0, 1.0, 0.0]\n",
     "\n",
     "# Keplerian velocity field\n",
     "rot_sign = {'cw': -1, 'ccw': 1}\n",
-    "Omega_dir = 'cw'\n",
     "Omega = rot_sign[Omega_dir] * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
     "umu = bhnerf.kgeo.azimuthal_velocity_vector(geos, Omega)\n",
     "g = bhnerf.kgeo.doppler_factor(geos, umu)\n",
     "\n",
     "# Magnitude normalized magnetic field in fluid-frame\n",
-    "b = bhnerf.kgeo.magnetic_field_fluid_frame(geos, umu, *b_consts)\n",
+    "b = bhnerf.kgeo.magnetic_field_fluid_frame(geos, umu, **b_consts)\n",
+    "z_width = 4                                      # maximum disk width [M]\n",
+    "rmax = fov_M / 2                                 # maximum recovery radius\n",
+    "rmin = float(bhnerf.constants.isco_pro(spin))    # minimum recovery radius\n",
     "domain = np.bitwise_and(np.bitwise_and(np.abs(geos.z) < z_width, geos.r > rmin), geos.r < rmax)\n",
     "b_mean = np.sqrt(np.sum(b[domain]**2, axis=-1)).mean()\n",
     "b /= b_mean\n",
     "\n",
     "# Polarized emission factors (including parallel transport)\n",
-    "# https://www.aanda.org/articles/aa/pdf/2022/09/aa44493-22.pdf\n",
     "J = np.nan_to_num(bhnerf.kgeo.parallel_transport(geos, umu, g, b, Q_frac=Q_frac, V_frac=0), 0.0)\n",
     "\n",
     "# ALMA scans on Apr11, 2017.\n",
@@ -396,7 +375,9 @@
     "                     10.91077667, 10.92088333, 10.93211333, 10.94236   , 10.95246667,\n",
     "                     10.96257333, 10.97345167, 10.98405   , 10.99415667, 11.00426333,\n",
     "                     11.01437   , 11.02447667, 11.03584667]) * units.hr\n",
-    "image_plane_flare = bhnerf.emission.image_plane_dynamics(emission_flare, geos, Omega, t_frames, t_injection, J, t_start_obs=t_frames[0]*0.99)\n",
+    "image_plane_flare = bhnerf.emission.image_plane_dynamics(\n",
+    "    emission_flare, geos, Omega, t_frames, t_injection, J, t_start_obs=t_start_obs*units.hr\n",
+    ")\n",
     "\n",
     "\"\"\" Background disk emissivity \"\"\"\n",
     "image_plane_disk = 0.0\n",
@@ -405,36 +386,25 @@
     "image_plane = image_plane_disk + image_plane_flare\n",
     "lightcurves = image_plane.sum(axis=(-1,-2))\n",
     "\n",
-    "# Save image_plane and light curve information\n",
-    "image_plane_xr = xr.DataArray(\n",
-    "    image_plane, \n",
-    "    name='Image Plane',\n",
-    "    dims=['t', 'stokes', 'beta', 'alpha'],\n",
-    "    coords={'t': t_frames, 'stokes': ['I', 'Q', 'U'], 'beta': geos.beta, 'alpha': geos.alpha},\n",
-    "    attrs = {\n",
-    "        'desc': 'Image fluxes without background accretion',\n",
-    "        'spin': spin, \n",
-    "        'inclination': np.rad2deg(inclination),\n",
-    "        'fov_M': fov_M, \n",
-    "        'Q_frac': Q_frac,\n",
-    "        'b_consts': b_consts\n",
-    "    })\n",
-    "lightcurves_xr =  xr.DataArray(\n",
-    "    lightcurves, {'t': t_frames, 'stokes': ['I', 'Q', 'U']}, ['t', 'stokes'], 'lightcurves', image_plane_xr.attrs)\n",
+    "# Save image_plane, light curves and simulation parameters\n",
+    "image_plane_xr = xr.DataArray(image_plane, {'t': t_frames, 'stokes': ['I', 'Q', 'U'], 'beta': geos.beta, 'alpha': geos.alpha}, ['t', 'stokes', 'beta', 'alpha'], 'Image Plane')\n",
+    "lightcurves_xr =  xr.DataArray(lightcurves, {'t': t_frames, 'stokes': ['I', 'Q', 'U']}, ['t', 'stokes'], 'lightcurves')\n",
     "image_plane_xr.to_netcdf(flare_path.parent.joinpath(sim_name+'_image_plane.nc'))\n",
-    "lightcurves_xr.to_pandas().to_csv(flare_path.parent.joinpath(sim_name+'_lightcurve.csv'))"
+    "lightcurves_xr.to_pandas().to_csv(flare_path.parent.joinpath(sim_name+'_lightcurve.csv'))\n",
+    "with open(flare_path.parent.joinpath('{}_params.yml'.format(sim_name)), 'w') as file:\n",
+    "    yaml.dump(simulation_params, file, default_flow_style=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 94,
    "id": "4448ca51-54ae-4a48-8c80-ec76a345a3ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "066e9ea4585249ddb190cb97c103686f",
+       "model_id": "47adbaf4a3ca45f1891b13510681b45f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,10 +418,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7f706b908d00>"
+       "<matplotlib.animation.FuncAnimation at 0x7fe99da6a8e0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,19 +430,19 @@
     "%matplotlib widget\n",
     "fig, axes = plt.subplots(1, 3, figsize=(10, 3))\n",
     "bhnerf.visualization.animate_movies_synced(\n",
-    "    image_plane_xr.transpose('stokes',...), axes, output=flare_path.parent.joinpath(sim_name+'_image_plane.gif'))"
+    "    image_plane_xr.transpose('stokes',...), axes, output=flare_path.parent.joinpath(sim_name + '_image_plane.gif'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2e213601-d5f2-48a4-b5b3-d7662cb85abc",
+   "execution_count": 95,
+   "id": "a954cd38-ad5f-48d7-bc56-e1175efef857",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68b39b21d9314a8cbc3581873abef49f",
+       "model_id": "9b1122e6348e472bb153f72ff8597fbb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -487,8 +457,16 @@
    "source": [
     "%matplotlib widget\n",
     "axes = bhnerf.visualization.plot_stokes_lc(lightcurves, ['I', 'Q', 'U'], t_frames, add_mean=True)\n",
-    "plt.savefig(flare_path.parent.joinpath(sim_name+'_lightcurve.pdf'))"
+    "plt.savefig(flare_path.parent.joinpath(sim_name + '_lightcurve.pdf'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77e83a7f-a605-4cf1-bfea-2fb160c85091",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
