accretion disk noise

--- a/notebooks/Synthetic lightcurves 0 - Generate data.ipynb
+++ b/notebooks/Synthetic lightcurves 0 - Generate data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "b85f8e98-8ea4-4e4c-9304-038107b539e2",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,6 @@
    "cell_type": "markdown",
    "id": "9dc9a11b-b0d4-4bf8-815f-a017e03e78c9",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -109,7 +108,6 @@
    "cell_type": "markdown",
    "id": "e13a0b01-3d23-4b4b-9dba-208de4be1c06",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -260,7 +258,6 @@
    "cell_type": "markdown",
    "id": "37080b65-356d-4038-9765-3a7c1a8ecf39",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -271,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "id": "9943a54d-2bbf-4069-b71c-65155f93a0f3",
    "metadata": {},
    "outputs": [],
@@ -285,6 +282,7 @@
     "        'spin': 0.0,\n",
     "        'inclination': 12.0,\n",
     "        'fov_M': 40.0, \n",
+    "        \n",
     "        # Magnetic field / polarization parameters\n",
     "        'Q_frac': 0.85,      # Fraction of linear polarization\n",
     "        'b_consts': {\n",
@@ -294,6 +292,7 @@
     "        },\n",
     "        # Keplerian velocity field\n",
     "        'Omega_dir': 'cw',\n",
+    "        \n",
     "        # Image plane \n",
     "        'num_alpha': 64,\n",
     "        'num_beta': 64,\n",
@@ -304,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "id": "bf5c0ccd-859c-44bb-83e1-8a1c56ec8b16",
    "metadata": {},
    "outputs": [
@@ -315,18 +314,11 @@
       "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
       "  result_data = func(*input_data)\n",
       "/scratch/imaging/projects/bh_nerf/bhNeRF/bhnerf/kgeo.py:482: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  cot_th_b = np.sqrt(1 - sin_th_b**2) / sin_th_b\n",
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  result_data = func(*input_data)\n"
+      "  cot_th_b = np.sqrt(1 - sin_th_b**2) / sin_th_b\n"
      ]
     }
    ],
    "source": [
-    "\"\"\" Flare emissivity \"\"\"\n",
-    "sim_name = simulation_params['name']\n",
-    "flare_path = Path(simulation_params['flare_path'])\n",
-    "emission_flare = xr.load_dataarray(flare_path)\n",
-    "\n",
     "# Compute geodesics\n",
     "geos = bhnerf.kgeo.image_plane_geos(\n",
     "    spin, np.deg2rad(inclination), \n",
@@ -334,7 +326,6 @@
     "    alpha_range=[-fov_M/2, fov_M/2],\n",
     "    beta_range=[-fov_M/2, fov_M/2])\n",
     "t_injection = -float(geos.r_o + fov_M/4)\n",
-    "\n",
     "\n",
     "# Keplerian velocity field\n",
     "rot_sign = {'cw': -1, 'ccw': 1}\n",
@@ -374,16 +365,23 @@
     "                     10.79808167, 10.80854   , 10.81977   , 10.83632167, 10.90067   ,\n",
     "                     10.91077667, 10.92088333, 10.93211333, 10.94236   , 10.95246667,\n",
     "                     10.96257333, 10.97345167, 10.98405   , 10.99415667, 11.00426333,\n",
-    "                     11.01437   , 11.02447667, 11.03584667]) * units.hr\n",
-    "image_plane_flare = bhnerf.emission.image_plane_dynamics(\n",
+    "                     11.01437   , 11.02447667, 11.03584667]) * units.hr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d41502a-8b2a-4429-bd07-8251c5d9fe94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim_name = simulation_params['name']\n",
+    "flare_path = Path(simulation_params['flare_path'])\n",
+    "emission_flare = xr.load_dataarray(flare_path)\n",
+    "\n",
+    "image_plane = bhnerf.emission.image_plane_dynamics(\n",
     "    emission_flare, geos, Omega, t_frames, t_injection, J, t_start_obs=t_start_obs*units.hr\n",
     ")\n",
-    "\n",
-    "\"\"\" Background disk emissivity \"\"\"\n",
-    "image_plane_disk = 0.0\n",
-    "\n",
-    "\"\"\" Image-plane fluxes \"\"\"\n",
-    "image_plane = image_plane_disk + image_plane_flare\n",
     "lightcurves = image_plane.sum(axis=(-1,-2))\n",
     "\n",
     "# Save image_plane, light curves and simulation parameters\n",
@@ -462,11 +460,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "77e83a7f-a605-4cf1-bfea-2fb160c85091",
+   "execution_count": 13,
+   "id": "33c8a5b7-aa93-4324-a37d-99cc358791ff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save image_plane, light curves and simulation parameters\n",
+    "image_plane_disk_xr = xr.DataArray(image_plane_disk, {'t': t_frames, 'stokes': ['I', 'Q', 'U'], 'beta': geos.beta, 'alpha': geos.alpha}, ['t', 'stokes', 'beta', 'alpha'], 'Image Plane')\n",
+    "lightcurves_disk_xr = xr.DataArray(lightcurves_disk, {'t': t_frames, 'stokes': ['I', 'Q', 'U']}, ['t', 'stokes'], 'lightcurves')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80ee2ecc-5e4d-4db2-9be6-b652bd4c96e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_plane_disk_xr.to_netcdf(grf_path.parent.joinpath(sim_name+'_image_plane.nc'))\n",
+    "lightcurves_disk_xr.to_pandas().to_csv(grf_path.parent.joinpath(sim_name+'_lightcurve.csv'))\n",
+    "with open(grf_path.parent.joinpath('{}_params.yml'.format(sim_name)), 'w') as file:\n",
+    "    yaml.dump(simulation_params, file, default_flow_style=False)"
+   ]
   }
  ],
  "metadata": {
